tests/sintax-semanth/should_fail/NotAndMinusCheck.tds
program
begin
    integer x1,y1;
    bool a1,b1,c1;
    integer main()
        begin
            integer x,y;
            bool a,b,c;
            //x1 = -(b == true);
            b = false;
            //c1 = !x1;
            c = (b == true);
            x = 10 + y;
            y = 10 - 5;
        end
end
